proj1/tests/correct/class_after_for.py
for i in range(0,10):
	print i
class name:
	print 10
