proj1/tests/error/class_in_for.py
for x in xrange(1,10):
	class ClassName:
		"""docstring for ClassName"""
		def __init__(self, arg):
			super(ClassName, self).__init__()
			self.arg = arg
			